--- a/MS Habitual Offender Data.ipynb
+++ b/MS Habitual Offender Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f6d68544",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ab07f3eb",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "d9e769ba",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "30eb4e9a",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "id": "9908c141",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "id": "628cb3fc",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "7f37ea38",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "id": "3560e92d",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "596"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "id": "c5bf157a",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "1788"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "id": "70540080",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "4           20.0  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "id": "4138a493",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
        "1680             Y            HINDS             5.0  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "id": "c0f52cd1",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "id": "bf2d4e4f",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "Name: 1680, dtype: object"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "id": "1decd295",
    "metadata": {},
    "outputs": [],
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "id": "3ca4fdb8",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "4           25.0  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 50,
    "id": "b33ff7c1",
    "metadata": {},
    "outputs": [
@@ -981,13 +981,14 @@
        "596"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(prisoner_df[\"mdoc_no\"].unique())"
+    "no_prisoners = len(prisoner_df[\"mdoc_no\"].unique())\n",
+    "no_prisoners"
    ]
   },
   {
@@ -1000,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "id": "0767adaf",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1016,7 @@
        "Name: race, dtype: float64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "id": "30c3d413",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1095,7 @@
        "Name: offense_desc, dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "id": "51a88b6a",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1174,7 @@
        "Name: offense_desc, dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "id": "762d92b6",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1210,7 @@
        "Name: offense_desc, dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "id": "588932e0",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1248,7 @@
        "Name: offense_desc, dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "id": "9fc217b7",
    "metadata": {
     "scrolled": true
@@ -1392,7 +1393,7 @@
        "1537           30.0  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 23,
    "id": "dd956443",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1614,7 @@
        "1751             Y         HARRISON            30.0  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,8 +1624,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c8b2ce4",
+   "metadata": {},
+   "source": [
+    "We can calculate the number of people charged with a specific offense (or set of offenses) by counting the number of unique MDOC numbers associated with that offense."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "id": "efa10357",
    "metadata": {},
    "outputs": [],
@@ -1637,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "id": "957b9f9c",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1656,7 @@
        "28"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 26,
    "id": "3dc4d226",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1677,7 @@
        "20"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "id": "f6a695e3",
    "metadata": {},
    "outputs": [
@@ -2065,7 +2074,7 @@
        "1786           30.0  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 28,
    "id": "974cf264",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2097,7 @@
        "7"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 29,
    "id": "ed1988ae",
    "metadata": {},
    "outputs": [
@@ -2109,7 +2118,7 @@
        "172"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2120,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 30,
    "id": "01b0025e",
    "metadata": {},
    "outputs": [
@@ -2130,7 +2139,7 @@
        "76"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2141,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 31,
    "id": "c4273a0a",
    "metadata": {},
    "outputs": [
@@ -2151,7 +2160,7 @@
        "7"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2162,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 32,
    "id": "84d3f5f0",
    "metadata": {},
    "outputs": [
@@ -2172,7 +2181,7 @@
        "255"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2182,51 +2191,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd3e811d",
+   "metadata": {},
+   "source": [
+    "We can figure out the number of people who were only charged with non-violent offenses by subtracting the total number of people who were charged with _violent_ offenses from the total number of people incarcerated on HO modifiers."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 47,
    "id": "4288a040",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "258"
+       "273"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_charged_with(habitual_only, \"RAPE|MURDER|HOMICIDE|ASSAULT|BATTERY|MANSLAUGHTER|ROBBERY|ASSLT|FORCIBLE\")"
+    "violent_off = number_charged_with(\n",
+    "    habitual_only, \n",
+    "    \"RAPE|MURDER|HOMICIDE|ASSAULT|BATTERY|MANSLAUGHTER|\"\n",
+    "    \"ROBBERY|ASSLT|FORCIBLE|KIDNAP|SHOOTING\"\n",
+    ")\n",
+    "violent_off"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 51,
    "id": "c482c9c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "338"
+       "323"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "596-258"
+    "nonviolent_off = no_prisoners - violent_off\n",
+    "nonviolent_off"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a371d5",
+   "id": "19c0434f",
    "metadata": {},
    "outputs": [],
    "source": []
